# vanetza-rust

./: .gitmodules  404.html  Cargo.toml  README.md  crates.js  help.html  index.html  print.html  rust-wrapper-patterns.html  search-index.js  searchindex.js  searchindex.json  settings.html  sidebar-items.js  src-files.js  struct.ChunkPacket.html  struct.PositionFix.html  trait.Runtime.html  type.DownPacket.html  type.ItsAid.html  using-autocxx.html  workspace.html
vanetza-rust/: Cargo.toml
vanetza-rust/examples/: router.rs
vanetza-rust/src/: common.rs  geonet.rs  lib.rs  net.rs  units.rs  utils.rs
vanetza-rust/src/common/: its_aid.rs  manual_runtime.rs  position_fix.rs  runtime.rs  station_type.rs
vanetza-rust/src/geonet/: address.rs  areas.rs  data_confirm.rs  data_indication.rs  data_request.rs  interface.rs  location_table.rs  mib.rs  packet.rs  position_vector.rs  router.rs  station_type.rs  transport_interface.rs
vanetza-rust/src/geonet/areas/: area.rs  shape.rs  (+2 more)
vanetza-rust/src/net/: chunk_packet.rs  cohesive_packet.rs  mac_address.rs  packet.rs  packet_variant.rs
vanetza-rust/src/units/: acceleration.rs  angle.rs  angular_velocity.rs  area.rs  curvature.rs  frequency.rs  length.rs  time.rs  velocity.rs
vanetza-sys/: Cargo.toml  build.rs
vanetza-sys/csrc/: vanetza_c.cpp  vanetza_c.hpp  vanetza_wrapper.hpp
vanetza-sys/csrc/geonet/: areas.hpp
vanetza-sys/csrc/units/: acceleration.hpp  angle.hpp  angular_velocity.hpp  area.hpp  curvature.hpp  frequency.hpp  length.hpp  time.hpp  velocity.hpp
vanetza-sys/src/: ffi.rs  ffi_autocxx.rs  lib.rs
(+621 files in other folders)
