[package]
name = "vanetza-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.118"

[build-dependencies]
autocxx-build = "0.26.0"
cmake = "0.1.50"
pkg-config = "0.3.30"

[features]
docs-only = []
